<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.JihadIntel.MobileLoginActivity"
    android:gravity="center"
    android:background="@drawable/gradient"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/kebab_menu"
            android:background="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jihad Intel"
            android:layout_marginTop="@dimen/margin_top_article"
            android:textSize="@dimen/text_size_x_large"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:layout_weight="1.5"
        android:layout_marginTop="@dimen/layout_margin_large">
        <EditText
            android:id="@+id/mobile_num"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="@dimen/text_padding"
            android:layout_margin="@dimen/layout_margin_large"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_mobile"
            android:maxLength="10"/>
        <EditText
            android:id="@+id/otp"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="@dimen/layout_margin"
            android:paddingLeft="@dimen/text_padding"
            android:maxLength="6"
            android:hint="@string/hint_otp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp"
            android:textColor="#ffffff"
            android:background="@drawable/login_button_border"
            android:layout_marginTop="@dimen/layout_margin"/>
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:background="@drawable/login_button_border"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_large"
            android:layout_margin="@dimen/layout_margin_large"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>