<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:layout_marginRight="@dimen/layout_margin_large"
            android:layout_marginLeft="@dimen/layout_margin_large"
            android:layout_marginBottom="@dimen/layout_margin">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:background="@drawable/edit_text_background"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/text_padding"                        android:lines="1"
                android:hint="@string/name"
                android:textSize="@dimen/text_size_med"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin_large"
            android:layout_marginLeft="@dimen/layout_margin_large"
            android:layout_marginBottom="@dimen/layout_margin">
            <EditText
                android:id="@+id/email_id"
                android:lines="1"
                android:layout_width="match_parent"
                android:background="@drawable/edit_text_background"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/text_padding"
                android:hint="@string/email_id"
                android:textSize="@dimen/text_size_med"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin_large"
            android:layout_marginLeft="@dimen/layout_margin_large"
            android:layout_marginBottom="@dimen/layout_margin">
            <EditText
                android:id="@+id/mobile"
                android:maxLength="10"
                android:inputType="number"
                android:layout_width="match_parent"
                android:lines="1"
                android:background="@drawable/edit_text_background"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/text_padding"
                android:hint="@string/mobile"
                android:textSize="@dimen/text_size_med"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin_large"
            android:layout_marginLeft="@dimen/layout_margin_large"
            android:layout_marginBottom="@dimen/layout_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:gravity="right|center_vertical"
                android:layout_marginLeft="@dimen/layout_margin_small"
                android:paddingRight="@dimen/test_form_padding"
                android:textSize="@dimen/text_size_med"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:layout_marginRight="@dimen/layout_margin"
                        android:textSize="@dimen/text_size_med"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:layout_margin="@dimen/layout_margin"
                        android:textSize="@dimen/text_size_med"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:layout_margin="@dimen/layout_margin"
                        android:textSize="@dimen/text_size_med"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin_large"
            android:layout_marginLeft="@dimen/layout_margin_large"
            android:layout_marginBottom="@dimen/layout_margin">
            <EditText
                android:id="@+id/dob"
                android:editable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:background="@drawable/edit_text_background"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/text_padding"
                android:hint="@string/dob"
                android:textSize="@dimen/text_size_med"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin_large"
        android:layout_marginLeft="@dimen/layout_margin_large"
        android:layout_marginBottom="@dimen/layout_margin">
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/text_padding"
                android:layout_height="40dp"
                android:hint="@string/hint_password"
                android:background="@drawable/edit_text_background"
                android:textSize="@dimen/text_size_med"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin_large"
        android:layout_marginLeft="@dimen/layout_margin_large"
        android:layout_marginBottom="@dimen/layout_margin">
            <EditText
                android:id="@+id/c_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:background="@drawable/edit_text_background"
                android:paddingLeft="@dimen/text_padding"
                android:textSize="@dimen/text_size_med"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin_large">
        <Button
            android:id="@+id/sign_up"
            android:background="@drawable/login_button_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginLeft="@dimen/layout_margin_large"
            android:layout_marginRight="@dimen/layout_margin_large"
            android:text="@string/sign_up"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>
</LinearLayout>