<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.JihadIntel.LocalLoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient">
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/kebab_menu"
            android:background="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jihad Intel"
            android:layout_marginTop="@dimen/margin_top_article"
            android:textSize="@dimen/text_size_x_large"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:layout_weight="1.8"
        android:layout_marginTop="@dimen/layout_margin_large">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin_large"
        android:layout_marginLeft="@dimen/layout_margin_large"
        android:layout_marginBottom="@dimen/layout_margin">
        <EditText
            android:id="@+id/email_id"
            android:lines="1"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_height="40dp"
            android:paddingLeft="@dimen/text_padding"
            android:hint="@string/email_id"
            android:textSize="@dimen/text_size_med"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin_large"
        android:layout_marginLeft="@dimen/layout_margin_large"
        android:layout_marginBottom="@dimen/layout_margin">
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/text_padding"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:background="@drawable/edit_text_background"
            android:textSize="@dimen/text_size_med"/>
    </LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_border"
        android:textColor="#ffffff"
        android:text="@string/login"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_register"
            android:textSize="@dimen/text_size_med"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/goto_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_register"
            android:paddingLeft="@dimen/layout_padding"
            android:textSize="@dimen/text_size_med"
            android:textColor="@color/blue"
            android:clickable="true"
            android:enabled="true"/>
    </LinearLayout>
    </LinearLayout>


</LinearLayout>